--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,18 @@
     <title>Yacht Adventures</title>
     <link rel="shortcut icon" href="./images/favicon.svg" type="image/svg" />
 
-    <link
+   <link
+
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+
+      crossorigin="anonymous"
+
+      referrerpolicy="no-referrer"
+
     />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
