--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,16 @@
     <title>Yacht Adventures</title>
     <link rel="shortcut icon" href="./images/favicon.svg" type="image/svg" />
 
-   <link
-
+    <!-- нормалайзер -->
+    <link
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-
       rel="stylesheet"
-
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-
       crossorigin="anonymous"
-
       referrerpolicy="no-referrer"
-
     />
 
+    <!-- шрифти -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -28,8 +24,17 @@
       rel="stylesheet"
     />
 
+    <!-- свайпер Руслана -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    />
+
+    <!-- загальні стилі -->
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <load src="partials/header.html" />
 
@@ -45,5 +50,10 @@
     <load src="partials/footer.html" />
 
     <script type="module" src="/main.js"></script>
+
+    <script type="text/javascript" src="./js/header.js"></script>
+    <script type="text/javascript" src="./js/rent-block.js"></script>
+    <script type="text/javascript" src="./js/reviews-block.js"></script>
+    <script type="text/javascript" src="./js/yahts-block.js"></script>
   </body>
 </html>
