--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,6 @@
 
     <load src="partials/footer.html" />
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
