--- a/src/index.html
+++ b/src/index.html
@@ -55,5 +55,6 @@
     <script type="text/javascript" src="./js/rent-block.js"></script>
     <script type="text/javascript" src="./js/reviews-block.js"></script>
     <script type="text/javascript" src="./js/yahts-block.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
   </body>
 </html>
